--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -17,7 +17,7 @@
       <!-- Login Form -->
       <form>
         <input type="text" id="nickname" class="fadeIn second" name="login" placeholder="kullanıcı adı">
-        <input type="text" id="password" class="fadeIn third" name="login" placeholder="şifre">
+        <input type="password" id="password" class="fadeIn third" name="login" placeholder="şifre">
 
         <input type="submit" class="fadeIn fourth" value="Giriş">
       </form>
