--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,7 +18,7 @@
       <form>
         <input type="text" id="email" class="fadeIn second" name="login" placeholder="e-posta">
         <input type="text" id="nickname" class="fadeIn third" name="login" placeholder="kullanıcı adı">
-        <input type="text" id="password" class="fadeIn fourth" name="login" placeholder="şifre">
+        <input type="password" id="password" class="fadeIn fourth" name="login" placeholder="şifre">
 
         <input type="submit" class="fadeIn fiveth" value="Kayıt Ol">
       </form>
