--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,17 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    
+    <ion-tab-button tab="register">
       <ion-icon name="bookmark"></ion-icon>
       <ion-label>Kayıt</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="signin">
       <ion-icon name="unlock"></ion-icon>
       <ion-label>Giriş</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Ana Sayfa</ion-label>
-    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
