--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,62 +1,24 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-    
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar>
+      <ion-title>
+        Ana Sayfa
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+<ion-content>
+<div class="background">
+    <div class="wrapper fadeInDown">
+        <div id="formContent">
+            <div class="fadeIn first">
+                <ion-icon name="home" style="zoom:2.0;"></ion-icon><br>
+                <h3 id= "gununSozleri" class= "fadeIn first" color="primary">Bunu biliyor musunuz? </h3><br>
+                <h5 id="bunuBiliyormusunuz" > Mısır piramitlerinin Mısır'da olduğunu.</h5>
+            </div>
+            <div id="formFooter">
+                <ion-button class="fadeIn second" color="dark">Oyun Sayfasına Git</ion-button>
 
-<ion-content padding>
-<form class="card card-block bg-faded">
-  <legend class="m-b-1 text-xs-center">Sign up</legend>
-
-  <div class="form-group input-group">
-    <span class="has-float-label">
-      <input class="form-control" id="first" type="text" placeholder="Name"/>
-      <label for="first">First</label>
-    </span>
-    <label class="has-float-label">
-      <input class="form-control" type="text" placeholder="Surname"/>
-      <span>Last</span>
-    </label>
-  </div>
-
-  <div class="form-group input-group">
-    <span class="input-group-addon">@</span>
-    <label class="has-float-label">
-      <input class="form-control" type="email" placeholder="email@example.com" value="email@example.com"/>
-      <span>Email</span>
-    </label>
-  </div>
-
-  <div class="form-group has-float-label">
-    <input class="form-control" id="password" type="password" placeholder="••••••••"/>
-    <label for="password">Password</label>
-  </div>
-
-  <label class="form-group has-float-label">
-    <select class="form-control custom-select">
-      <option selected>United States</option>
-      <option>Canada</option>
-      <option>...</option>
-    </select>
-    <span>Country</span>
-  </label>
-
-  <div class="form-group">
-    <label class="custom-control custom-checkbox">
-      <input class="custom-control-input" type="checkbox"/>
-      <span class="custom-control-indicator"></span>
-      <span class="custom-control-description">Subscribe to newsletter</span>
-    </label>
-  </div>
-
-  <button class="btn btn-block btn-primary" type="submit">Sign up</button>
-</form>
-
-<!---->
-
-<a href="https://github.com/tonystar/bootstrap-float-label" target="_blank">
-  <img src="https://img.shields.io/github/stars/tonystar/bootstrap-float-label.svg?style=social&label=Star"/>
-</a>
-
+            </div>
+            </div>
+    </div>
+</div>
 </ion-content>
