--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,10 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+
+.background{
+  min-height: 100%;
+  background-image: url("~resources/background.png");
+  background-size: cover;
+}
